--- a/css/styles.css
+++ b/css/styles.css
@@ -552,6 +552,10 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
 background-color: #fcfcfc;
 border-radius: 4px;
+ padding: 72px 24px 24px 24px;
+ display: flex;
+    flex-direction: column;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn{
@@ -585,4 +589,30 @@ border-radius: 4px;
 .modal-close-btn:hover .modal-icon,
 .modal-close-btn:focus .modal-icon {
     fill: #ffffff;
+}
+
+.modal-title {
+ font-weight: 500;
+font-size: 16px;
+
+/* line-height: 24px; */ 
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+
+margin-bottom: 34px;
+}
+
+.inputs {
+    margin-bottom: 8px;
+}
+
+.modal-input{
+  border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+width: 100%;
+height: 40px;
+padding-left: 37px;
+
 }
