--- a/css/styles.css
+++ b/css/styles.css
@@ -565,8 +565,8 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-footer:hover,
-.btn-footer:focus {
+.footer-btn:hover,
+.footer-btn:focus {
     background-color: #404bbf;
 }
 
